[tool.poetry]
name = "cat_facts"
version = "0.1.0"
description = "Really useful application on cat facts!"
authors = ["Rui Batista"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
